--- a/activities/May_29_2024_AZ.md
+++ b/activities/May_29_2024_AZ.md
@@ -15,6 +15,8 @@
 5. Create a list called `animals_list` in which the first element contains the speed column of the `animals` dataframe and the second element contains the color column of the `animals` dataframe. 
 6. Give each element of your list the appropriate name (i.e speed and color).
 
+## Plotting
+
 1. Change the `animals` data frame to a tibble called `animals_tb`. Save the row names to a column called `animal_names` before turning it into a tibble.
 
 	<p align="center">
@@ -27,28 +29,8 @@
   	<img src="../img/animals_unordered_ggplot2.png" width="425"/>
 	</p>
 
-3. We decide that our plot would look better with the animal names ordered from slowest to fastest. Using the `animals_tb` tibble, reorder the animals on the x-axis to start with the slowest animal on the left-hand side of the plot to the fastest animal on the right-hand side of the plot by completing the following steps:
+3. We decide that our plot would look better with the animal names ordered from slowest to fastest. Let's try to plot that!
 
-	**a.** Use the `arrange()` function to order the rows by speed from slowest to fastest. Then use the `pull()` function to extract the `animal_names` column as a vector of character values. Save the new variable as `names_ordered_by_speed`.
-
-	**b.** Turn the `animal_names` column of `animals_tb` into a factor and specify the levels as `names_ordered_by_speed` from slowest to fastest (output in part a). Note: this step is crucial, because ggplot2 uses `factor` as plotting order, instead of the order we observe in data frame.
-	
-	**c.** Re-plot the scatterplot with the animal names in order from slowest to fastest.
-	
-	<p align="center">
-  	<img src="../img/animals_ordered_ggplot2.png" width="425"/>
-	</p>
-	
-> Note: If you are interested in exploring other ways to reorder a variable in ggplot2, refer to this [post](https://www.r-graph-gallery.com/267-reorder-a-variable-in-ggplot2.html).
-	
-4. Save the plot as a PDF called `animals_by_speed_scatterplot.pdf ` to the `results` folder.
-
-5. Use the functions from the `dplyr` package to perform the following tasks:
-
-	**a.** Extract the rows of `animals_tb` tibble with color of gray or tan, order the rows based from slowest to fastest speed, and save to a variable called `animals_gray_tan`.
-	
-	<p align="center">
+ 	<p align="center">
   	<img src="../img/animals_tb_ordered.png" width="300"/>
 	</p>	
-	
-	**b.** Save `animals_gray_tan` as a comma-separated value file called `animals_tb_ordered.csv` to the `results` folder.	
