--- a/activities/May_29_2024_AZ.md
+++ b/activities/May_29_2024_AZ.md
@@ -1,6 +1,8 @@
+We will start by creating a new Project called `Exercises`, with a folder named `data`.
+
 ## Reading in and inspecting data
 
-1. Download the [animals.csv](https://raw.githubusercontent.com/hbctraining/Intro-to-R-flipped/master/data/animals.csv), by right-clicking on the link and "Save Link As..." to place the file into the `data` directory.
+1. Download the [animals.csv](https://raw.githubusercontent.com/hbctraining/Intro-to-R-flipped/master/data/animals.csv), by right-clicking on the link and "Save Link As..." into a folder on your computer. Upload the file into the data directory in your new project on SCP.
 2. Read the `.csv` file into your environment and assign it to a variable called `animals`. **Be sure to check that your row names are the different animals.**
 3. Check to make sure that `animals` is a dataframe.
 4. How many rows are in the `animals` dataframe? How many columns?
